--- a/src/components/TopLogo.astro
+++ b/src/components/TopLogo.astro
@@ -1,92 +1,150 @@
 ---
 import { css } from "../../styled-system/css";
+import "@fontsource-variable/afacad";
+import "@fontsource-variable/noto-sans-jp";
 ---
 
-<div>
+<div
+  class={css({
+    display: "flex",
+    flexDirection: "column",
+    alignItems: "center",
+    justifyContent: "center",
+    width: "100%",
+    height: "100%",
+    position: "relative",
+    color: "#fff",
+  })}
+>
   <div
     class={css({
-      display: "flex",
-      flexDirection: "column",
-      alignItems: "center",
-      justifyContent: "center",
-      height: "100vh",
-      position: "relative",
-      color: "#fff",
+      textAlign: "center",
+      zIndex: 1,
+      height: "fit-content",
     })}
   >
-    <div class={css({ textAlign: "center", zIndex: 1 })}>
-      <h1
-        class={css({
+    <h1
+      class={css({
+        fontSize: "2xl",
+        fontWeight: 700,
+        fontFamily: "Noto Sans JP Variable",
+        md: {
+          fontSize: "3xl",
+        },
+        lg: {
+          fontSize: "4xl",
+        },
+        opacity: 0,
+        animation: "fadeIn 1.5s ease-in 0s forwards",
+      })}
+    >
+      実世界インタラクション研究室
+    </h1>
+    <h2
+      class={css({
+        fontSize: "xl",
+        fontWeight: 400,
+        fontFamily: "Afacad Variable",
+        lg: {
           fontSize: "2xl",
-          fontWeight: 700,
-          fontFamily: "Noto Sans JP Variable",
-          md: {
-            fontSize: "3xl",
-          },
-          lg: {
-            fontSize: "4xl",
-          },
-        })}
-      >
-        実世界インタラクション研究室
-      </h1>
-      <h2
-        class={css({
-          fontSize: "xl",
-          fontWeight: 400,
-          fontFamily: "Afacad Variable",
-          lg: {
-            fontSize: "2xl",
-          },
-        })}
-      >
-        Physically Augmented Interaction Lab
-      </h2>
-    </div>
-    <div
-      class={css({
-        position: "absolute",
-        top: "0",
-        left: "0",
-        right: "0",
-        height: "100%",
-        display: "flex",
-        justifyContent: "center",
-        alignItems: "center",
+        },
+        opacity: 0,
+        animation: "fadeIn 1s ease-in 0.5s forwards",
       })}
     >
-      <div class="logo-bg-big"></div>
-    </div>
-    <div
-      class={css({
-        position: "absolute",
-        top: "0",
-        left: "0",
-        right: "0",
-        height: "100%",
-        display: "flex",
-        justifyContent: "center",
-        alignItems: "center",
-      })}
-    >
-      <div class="logo-bg-small"></div>
-    </div>
+      Physically Augmented Interaction Lab
+    </h2>
   </div>
+  <div
+    class={css({
+      position: "absolute",
+      top: "0",
+      left: "0",
+      right: "0",
+      height: "100%",
+      display: "flex",
+      justifyContent: "center",
+      alignItems: "center",
+    })}
+  >
+    <div class="logo-bg-big"></div>
+  </div>
+  <div
+    class={css({
+      position: "absolute",
+      top: "0",
+      left: "0",
+      right: "0",
+      height: "100%",
+      display: "flex",
+      justifyContent: "center",
+      alignItems: "center",
+    })}
+  >
+    <div class="logo-bg-small"></div>
+  </div>
+</div>
 
-  <style>
-    .logo-bg-big {
-      border: 4px solid red;
+<style>
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      clip-path: inset(20% 0 20% 0);
+      filter: blur(10px) brightness(0.5);
+    }
+    to {
+      opacity: 1;
+      clip-path: inset(0 0 0 0);
+      filter: blur(0) brightness(1);
+    }
+  }
+  @keyframes logoBg {
+    from {
+      width: 400px;
+      height: 400px;
+      opacity: 0;
+      border-width: 2px;
+      filter: blur(2px) brightness(0.5);
+    }
+    to {
       width: 200px;
       height: 200px;
-      transform: rotate(45deg) skew(-16deg, -16deg);
-      opacity: 0.8;
+      opacity: 0.6;
+      border-width: 4px;
+      filter: blur(0) brightness(1);
     }
-    .logo-bg-small {
-      border: 8px solid red;
+  }
+  @keyframes logoSm {
+    from {
+      width: 340px;
+      height: 340px;
+      opacity: 0;
+      border-width: 4px;
+      filter: blur(2px) brightness(0.5);
+    }
+    to {
       width: 170px;
       height: 170px;
-      transform: rotate(45deg) skew(-16deg, -16deg);
-      opacity: 0.8;
+      opacity: 0.6;
+      border-width: 8px;
+      filter: blur(0) brightness(1);
     }
-  </style>
-</div>
+  }
+
+  .logo-bg-big {
+    border: 0px solid red;
+    width: 200px;
+    height: 200px;
+    transform: rotate(45deg) skew(-16deg, -16deg);
+    opacity: 0;
+    animation: logoBg 1.3s ease-in 0.2s forwards;
+  }
+  .logo-bg-small {
+    border: 0px solid red;
+    width: 170px;
+    height: 170px;
+    transform: rotate(45deg) skew(-16deg, -16deg);
+    opacity: 0;
+    animation: logoSm 1.3s ease-in 0.2s forwards;
+  }
+</style>
