--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,60 @@
 ---
 import { css } from "../../styled-system/css";
 import "../index.css";
-import "@fontsource-variable/afacad";
-import "@fontsource-variable/noto-sans-jp";
 import "@fontsource/zen-kaku-gothic-antique";
+import "@fontsource-variable/montserrat";
 import Layout from "../layouts/Layout.astro";
 import TopLogo from "../components/TopLogo.astro";
+import AboutUsSection from "../components/Top/AboutUs.astro";
+import LatestNewsSection from "../components/Top/LatestNews.astro";
 ---
 
-<Layout title="実世界インタラクション研究室">
+<Layout title="実世界インタラクション研究室" path="/">
   <div
     class={css({
-      backgroundImage: "url(/topimg.webp)",
+      backgroundImage: "url(/top/topimg.webp)",
       backgroundSize: "cover",
       backgroundPosition: "center",
+      backgroundAttachment: "fixed",
     })}
   >
     <div
       class={css({
-        backgroundColor: "#0004",
-        backdropFilter: "blur(4px)",
+        backgroundColor: "#0006",
+        width: "100%",
+        height: "75svh",
+        animation: "Blur 1s ease-out 1s forwards",
       })}
     >
       <TopLogo />
     </div>
   </div>
+  <AboutUsSection />
+  <div
+    class={css({
+      backgroundColor: "#e96656",
+      width: "100%",
+      height: "140px",
+    })}
+  >
+  </div>
+  <div
+    class={css({
+      padding: "20px 40px",
+      mb: "2rem",
+    })}
+  >
+    <LatestNewsSection />
+  </div>
+
+  <style>
+    @keyframes Blur {
+      from {
+        backdrop-filter: blur(0px);
+      }
+      to {
+        backdrop-filter: blur(4px);
+      }
+    }
+  </style>
 </Layout>
