--- a/src/pages/result.astro
+++ b/src/pages/result.astro
@@ -5,7 +5,7 @@ import "../index.css";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="研究成果" path="/study">
+<Layout title="研究成果" path="/result">
   <PageHead> 研究成果 </PageHead>
   <p>Markdown here</p>
 </Layout>
