--- a/src/pages/reports/index.astro
+++ b/src/pages/reports/index.astro
@@ -63,7 +63,7 @@ const posts = (await getCollection("reports")).sort(
                     },
                   })}
                 >
-                  <div class={css({ width: "calc(100% - 400px)" })}>
+                  <div class={css({ lg: { width: "calc(100% - 400px)" } })}>
                     <h4
                       class={css({
                         fontSize: "1.2rem",
