--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const links = [
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{title} - ManabeLab</title>
     <meta
       name="google-site-verification"
       content="_hycogv11tb4ZSjSPQdAp1TJ_H0n42r43ViLtRjePzA"
