--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -1,4 +1,5 @@
 ---
+import { MdArrowBackIos } from "react-icons/md";
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import Layout from "./Layout.astro";
@@ -109,6 +110,29 @@ const {
           <div class="markdown">
             <slot />
           </div>
+          <a href="/reports">
+            <div
+              class={css({
+                display: "flex",
+                gap: "0.5em",
+                alignItems: "center",
+                mt: "3rem",
+                color: "{colors.rose.700}",
+                "&:hover": {
+                  color: "{colors.rose.900}",
+                },
+              })}
+            >
+              <MdArrowBackIos />
+              <div
+                class={css({
+                  borderBottom: "1px solid",
+                })}
+              >
+                活動報告一覧にもどる
+              </div>
+            </div>
+          </a>
         </div>
       </article>
     </main>
@@ -149,7 +173,6 @@ const {
       margin-bottom: 1em;
     }
     code {
-      background-color: rgb(var(--gray-light));
       padding: 0.1em 0.25em;
       border-radius: 0.25em;
     }
@@ -161,6 +184,11 @@ const {
     ul ul {
       list-style-type: circle;
       margin-left: 20px;
+    }
+
+    a {
+      color: #e11d48;
+      text-decoration: underline;
     }
   }
 </style>
