--- a/src/components/Top/AboutUs.astro
+++ b/src/components/Top/AboutUs.astro
@@ -9,6 +9,7 @@ import Paragraph from "./Paragraph.astro";
     width: "100%",
     height: "20%",
     color: "{colors.neutral.50}",
+    pb: "3rem",
   })}
 >
   <h2
@@ -54,7 +55,7 @@ import Paragraph from "./Paragraph.astro";
         display: "flex",
         flexDirection: "column",
         gap: ".5rem",
-        pb: "4rem",
+        justifyContent: "center",
       })}
     >
       <Paragraph>
