サイドメニュー追加

--- a/src/components/NarrowHeader.astro
+++ b/src/components/NarrowHeader.astro
@@ -67,7 +67,7 @@ const { links } = Astro.props;
       left: 0,
       width: "100%",
       height: "calc(100svh - 58px)",
-      background: "#fffd",
+      background: "#fffe",
       backdropFilter: "blur(10px)",
       zIndex: 99,
       justifyContent: "flex-start",
