--- a/src/components/Top/NarrowNewsTopics.astro
+++ b/src/components/Top/NarrowNewsTopics.astro
@@ -4,9 +4,9 @@ import { css } from "../../../styled-system/css";
 import { getCollection } from "astro:content";
 import FormattedDate from "../FormattedDate.astro";
 
-const posts = (await getCollection("reports")).sort(
-  (a, b) => Date.parse(b.data.pubDate) - Date.parse(a.data.pubDate),
-);
+const posts = (await getCollection("reports"))
+  .sort((a, b) => Date.parse(b.data.pubDate) - Date.parse(a.data.pubDate))
+  .slice(0, 5);
 ---
 
 <div class={css({ height: "100%" })}>
