アーカイブと検索の実装

--- a/src/components/PageHead.astro
+++ b/src/components/PageHead.astro
@@ -3,6 +3,7 @@ import { css } from "../../styled-system/css";
 ---
 
 <h1
+  id="page-title"
   class={css({
     fontSize: "2rem",
     fontWeight: "bold",
