--- a/src/pages/reports/index.astro
+++ b/src/pages/reports/index.astro
@@ -13,7 +13,7 @@ const posts = (await getCollection("reports")).sort(
 ---
 
 <Layout title="活動報告" path="/reports">
-  <div class={css({ maxWidth: "1400px", margin: "0 auto" })}>
+  <div class={css({ maxWidth: "1400px", margin: "0 auto", pb: "2rem" })}>
     <PageHead> 活動報告 </PageHead>
     <div
       class={css({
